2010-09-21  Yves Blusseau  <blusseau@zetam.org>

	Keep boot and grub directory names in sync with utils scripts

	* configure.ac: Define GRUB_BOOT_DIR_NAME and GRUB_DIR_NAME macros.
	* config.h.in: Add previous macros.
	* include/grub/emu/misc.h (DEFAULT_DIRECTORY): Use previous macros.
	* util/grub-install.in: Use $bootdir and $grubdir variables.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/kern/emu/hostdisk.c (find_system_device): Only try to
	convert partition names to disk names if the new `convert' parameter
	is set.
	(grub_util_biosdisk_get_grub_dev): If opening the disk device
	returns GRUB_ERR_UNKNOWN_DEVICE, treat the partition device as a
	disk in its own right.  This can happen with Xen disk images.

2010-09-21  Yves Blusseau  <blusseau@zetam.org>

	* util/grub-editenv.c: Update strings to avoid warnings when generating
	grub.pot file.
	* util/grub-setup.c: Likewise.

2010-09-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Change version to 1.99~beta0.

2010-09-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/multiboot_mbi.c (grub_fill_multiboot_mmap):
	Add BADRAM.
	* grub-core/loader/multiboot_mbi2.c (grub_fill_multiboot_mmap):
	Likewise.
	* include/multiboot.h: Resynced with specification.
	* include/multiboot2.h: Likewise.

2010-09-21  Colin Watson  <cjwatson@ubuntu.com>

	Fix po directory handling.

	* configure.ac: Create po/Makefile.in rather than po/Makefile.
	* grub-core/gnulib/Makefile.am: Import gettext module.
	* m4/gnulib-cache.m4: Likewise.
	* m4/gnulib-comp.m4: Likewise.
	* m4/gettext.m4: New file, from gnulib.
	* m4/glibc2.m4: Likewise.
	* m4/iconv.m4: Likewise.
	* m4/intdiv0.m4: Likewise.
	* m4/intl.m4: Likewise.
	* m4/intldir.m4: Likewise.
	* m4/intlmacosx.m4: Likewise.
	* m4/intmax.m4: Likewise.
	* m4/inttypes-pri.m4: Likewise.
	* m4/lcmessage.m4: Likewise.
	* m4/lib-ld.m4: Likewise.
	* m4/lib-link.m4: Likewise.
	* m4/lib-prefix.m4: Likewise.
	* m4/lock.m4: Likewise.